--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <title>listeningroom.</title>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-
 <script src="listeningroom.js"></script>
 
 <link rel="stylesheet" href="style.css">
@@ -13,6 +12,7 @@
 </head>
 <body>
 	<header> <h1>listeningroom.</h1> </header>
+
 	<main ng-app="myApp" ng-controller="appCtrl as ctrl">
 		<div class="musicplayer">
 
@@ -26,10 +26,14 @@
             	</defs>
             	<image width="100%" height="100%" preserveAspectRatio="xMidYMid slice" xlink:href="albumart.jpg" mask="url(#shape-mask)"></image>
        		</svg>
-        		
-       		<!--Controls for the player-->
 			<p>
-			<audio id="player" src="song.mp3"></audio>
+
+			<audio id="player" src="song.mp3" (ontimeupdate)="updateBar()"></audio>
+			<!--Progress bar-->
+			<div id="bar" class="progress-bar" ng-class="{'so-far' : ctrl.isPlaying}"></div>
+			<p>
+
+			<!--Controls for the player-->
 			<div>
 				<button onclick="document.getElementById('player').play()" ng-click="ctrl.playAudio()">  ▶ </button>
 				<button onclick="document.getElementById('player').pause()" ng-click="ctrl.pauseAudio()">  || </button>
@@ -54,16 +58,13 @@
 				<!--Repeat this for each song in the playlist-->
 				<li ng-repeat="song in ctrl.songs">
 
-					{{"blah"}}
-
 				</li>
-
 			</ul>
 		</div>
 	</main>
+
 	<footer>
-			<h8> playing from local mp3 file for now ... </h8>
+			<h6> playing from local mp3 file for now ... </h6>
 	</footer>
-	
 </body>
 </html>
