--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                     	<circle id="inner" cx="50" cy="50" r="10" fill="black"/>
                 	</mask>
             	</defs>
-            	<image width="100%" height="100%" preserveAspectRatio="xMidYMid slice" xlink:href="albumart.jpg" mask="url(#shape-mask)"></image>
+            	<image width="100%" height="100%" preserveAspectRatio="xMidYMid slice" xlink:href={{ctrl.playlist[0].albumart}} mask="url(#shape-mask)"></image>
        		</svg>
 			<p>
 
-			<audio id="player" src="song.mp3"></audio>
+			<audio id="player" src={{ctrl.playlist[0].src}}></audio>
 			<!--Progress bar-->
 			<div id="bar" class="progress-bar" ng-class="{'so-far' : ctrl.isPlaying}"></div>
 			<p>
@@ -48,7 +48,7 @@
 			Start adding some songs to create a playlist.
 				<ul>
 				<!--Add a new song from user input-->
-				<form ng-submit="ctrl.addSong(song)">
+				<form>
 					<div>
 						<input placeholder="Your song here..." ng-model="song">
 						<span>
@@ -57,8 +57,8 @@
 					</div>
 				</form>
 				<!--Repeat this for each song in the playlist-->
-				<li ng-repeat="song in ctrl.songs">
-
+				<li ng-repeat="song in ctrl.playlist">
+					{{song.artist}} - {{song.name}}
 				</li>
 			</ul>
 		</div>
@@ -68,7 +68,7 @@
 		</footer>
 	</div>
 
-	
 	<script src="listeningroom.js"></script>
+
 </body>
 </html>
