very small comment update.
-adding/searching a song is not implemented as of yet

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="playlist">
 			Start adding some songs to create a playlist.
 				<ul>
-				<!--Add a new song from user input-->
+				<!--Add a new song from user input - not implemented currently-->
 				<form>
 					<div>
 						<input placeholder="Your song here..." ng-model="song">
