--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
                     	<circle id="inner" cx="50" cy="50" r="10" fill="black"/>
                 	</mask>
             	</defs>
-            	<image width="100%" height="100%" preserveAspectRatio="xMidYMid slice" xlink:href={{ctrl.playlist[0].albumart}} mask="url(#shape-mask)"></image>
+            	<image width="100%" height="100%" preserveAspectRatio="xMidYMid slice" xlink:href="{{ctrl.playlist[ctrl.playlistPos].albumart}}" mask="url(#shape-mask)"></image>
        		</svg>
 			<p>
 
-			<audio id="player" src={{ctrl.playlist[0].src}}></audio>
+			<!--Audio HTML element-->
+			<audio id="player" src="{{ctrl.playlist[ctrl.playlistPos].src}}"></audio>
+			
 			<!--Progress bar-->
 			<div id="bar" class="progress-bar" ng-class="{'so-far' : ctrl.isPlaying}"></div>
 			<p>
