progress bar working better.
- added two short length songs just to make manual testing faster
- changed named of index.html to listeningroom.html
-trying to implement the feature where the audio element automatically proceeds to the next song object in playlist when the current song ends
->for now just a simple alert in place to signify when the current song is ended
-progress bar no longer "lags"
->needed to reset the variables percent and timer for each nextSong method call

--- a/listeningroom.html
+++ b/listeningroom.html
@@ -28,7 +28,7 @@
 			<p>
 
 			<!--Audio HTML element-->
-			<audio id="player"><source src="{{ctrl.playlist[ctrl.playlistPos].src}}" type="audio/mpeg"></audio>
+			<audio id="player"><source src="{{ctrl.playlist[ctrl.playlistPos].src}}"></audio>
 
 			<!--Progress bar-->
 			<div id="bar" class="progress-bar" ng-class="{'so-far' : ctrl.isPlaying}"></div>
